Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/typevars/5060485/Neg1.out
Neg1.java:9:29: compiler.err.cant.resolve: kindname.class, Y, , 
1 error
